tests/ui/error-codes/E0038.stderr
error[E0038]: the trait `Trait` is not dyn compatible
  --> $DIR/E0038.rs:5:20
   |
LL | fn call_foo(x: Box<dyn Trait>) {
   |                    ^^^^^^^^^ `Trait` is not dyn compatible
   |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
  --> $DIR/E0038.rs:2:22
   |
LL | trait Trait {
   |       ----- this trait is not dyn compatible...
LL |     fn foo(&self) -> Self;
   |                      ^^^^ ...because method `foo` references the `Self` type in its return type
   = help: consider moving `foo` to another trait

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0038`.
